[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mutools"
version = "0.1.0"
description = "Common utilities shared across projects"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "typing>=3.10.0.0",
    "uproot>=5.6.9",
]

[project.optional-dependencies]
dev = []
