[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mutools"
version = "0.1.0"
description = "Common utilities shared across projects"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "imageio>=2.37.2",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "scipy>=1.13.1",
    "toml>=0.10.2",
    "uproot>=5.6.9",
]

[project.optional-dependencies]
dev = []

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []
